tools/vendor/datatest-stable/tests/compile-fail/missing-root-no-args.rs
datatest_stable::harness! {
    {
        test = my_test,
    },
}
